@@ -1,8 +1,9 @@
 [comment {-*- text -*- doctools manpage}]
-[manpage_begin pt::pgen n 1.0.1]
+[vset PGEN_VERSION 1.0.2]
+[manpage_begin pt::pgen n [vset PGEN_VERSION]]
 [include include/module.inc]
 [titledesc {Parser Generator}]
-[require pt::pgen [opt 1.0.1]]
+[require pt::pgen [opt [vset PGEN_VERSION]]]
 [description]
 [include include/ref_intro.inc]
 
